# Event-Emitter-cpp

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am
src/eventemittercpp/: connection.cpp  connection.h  eventemitter.cpp  eventemitter.h  eventsubscriber.cpp  eventsubscriber.h
src/eventemittercpp/detail/: functiontraits.h  handler.cpp  handler.h
test/: Makefile.am  main.cpp
test/event/: eventemittertest.h
