lib_LTLIBRARIES = libeventemittercpp.la
libeventemittercpp_la_CPPFLAGS = 
libeventemittercpp_la_SOURCES =								\
	eventemittercpp/eventemitter.cpp								\
	eventemittercpp/connection.cpp								\
	eventemittercpp/eventsubscriber.cpp							\
	\
	eventemittercpp/detail/handler.cpp
	
	
nobase_include_HEADERS =								\
	eventemittercpp/eventemitter.h								\
	eventemittercpp/connection.h								\
	eventemittercpp/eventsubscriber.h								\
	\
	eventemittercpp/detail/functiontraits.h							\
	eventemittercpp/detail/handler.h